Increase surefire MaxPermSize